# interview_redacted

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  fly.toml  pyproject.toml  requests.http  ruff.toml
.github/workflows/: ci.yaml
src/: main.py  settings.py  worker.py
src/flights/: models.py  router.py  service.py  utils.py
src/storage/: redis.py
src/storage/db/: __init__.py
