[project]
name = "interview_redacted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.13.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
